Fix alignment and justification issues

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -21,6 +21,14 @@
 		width: auto;
 		line-height: var(--ironsworn-line-height);
 	}
+
+	:where(.window-content) {
+		.flexcol,
+		.flexrow {
+			display: flex;
+			align-items: initial;
+		}
+	}
 }
 
 @import 'transitions.less';
